Fix chat-input not showing bug

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ iframe{
     padding: 10px;
     display: flex;
     position: absolute;
-    margin-top: 750px;
+    margin-top: 600px;
     display: flex;
     flex-direction: row;
     /* background-color: #007AFF; */
